# L20-CodeForge

./: .gitignore  README.md  REPRODUCIBILITY.md  pyproject.toml
configs/: grpo_guided_retry.yaml  l20_smoke.yaml  qwen25_coder_7b_qlora.yaml
docs/: ARCHITECTURE.md  L20_RUNBOOK.md  MILESTONE_1_DATA_FACTORY.md  MILESTONE_2_REPAIR_SUITE.md  MILESTONE_3_MINI_SWE_ADAPTER.md  MILESTONE_4_REAL_DATA.md  MILESTONE_5_L20_7B_SFT.md  MILESTONE_6_PUBLIC_BENCHMARK.md  MILESTONE_7_LIVECODEBENCH.md  MILESTONE_8_LCB_PLUS15_FOCUS.md  MILESTONE_9_XCODER_L20_PLUS15_PROBE.md  RESEARCH_NOTES.md  SETUP_REPORT.md
paper/: ARXIV_SUBMISSION.md  Makefile  README.md  REFERENCE_AUDIT.md  main.tex  references.bib
scripts/: analyze_lcb_target_priority.py  audit_lcb_candidate_health.py  audit_lcb_expected_verifier.py  bootstrap_remote.sh  build_evalplus_repro_package.py  build_generalization_scorecard.py  build_lcb_adaptive_differential_inputs.py  build_lcb_behavior_test_prompts.py  build_lcb_expected_output_verifier_prompts.py  build_lcb_public_selection.py  build_xcoder_sft_jsonl.py  check_gpu.py  compare_lcb_selection_runs.py  download_model.py  evalplus_symbolic_repair_ablation.py  evaluate_lcb_generations.py  evaluate_lcb_selection_chunks.py  generate_lcb_behavior_tests.py  generate_lcb_verifier_choices.py  materialize_lcb_release_jsonl.py  regenerate_lcb_final_answers.py  repair_lcb_generations.py  run_lcb_subset_benchmark.py  run_remote_quality_gate.sh  run_smoke_loop.sh  select_lcb_expected_verifier_candidates.py
tests/: test_code_bench_sft.py  test_context_compiler.py  test_real_sft.py  (+15 more)
(+348 files in other folders)
